// Event-driven page loader

struct PageLoader {

}

impl PageLoader {

}

#[cfg(test)]
mod tests {
    #[test]
    fn it_works() {
        assert_eq!(2 + 2, 4);
    }
}
