@startuml
package dom_parser {
    class lib {
        +get_links(): URIResult
    }
}

package linkresult{
    class URIResult
    class URIScope
    class URIService{
        +form_full_URL(uri: &str, host: &str)
    }
}

package main {
    class PageLoader {
        +fetch_url(follow_redirects:bool, max_redirects: u8)
    }
}

lib::get_links --|> URIService::form_full_URL
lib::get_links --|> PageLoader::fetch_url
URIScope -|> URIService
URIResult ... lib::get_links
@enduml